# 3D_Sparse_Skeleton

./: .gitignore  .gitmodules  2D_gvd.ipynb  2D_projection.py  3D_Lee.py  CMakeLists.txt  Doxyfile  README.md  tester.ipynb  vis.py
2D_maps/: Area_1_floor_projection_meta.npy
MSSP/: CMakeLists.txt
MSSP/input/: M.npy
MSSP/output/: test.npy
MSSP/src/: main.cpp
evaluation/: evaluation_area_1_down_sampling.xlsx  evaluation_area_1_parameters.xlsx  evaluation_areas.xlsx  evaluation_voxel.xlsx
modular_polygon_generation/: CMakeLists.txt
modular_polygon_generation/libcore/data/configs/: area_1.ini  map.ini
modular_polygon_generation/libcore/data/configs/tests/: area_1_start_1.ini  area_1_start_2.ini
modular_polygon_generation/libcore/data/configs/tests/area_1_down_sampling/: area_1_downsampled_0_01.ini  area_1_downsampled_0_05.ini  area_1_downsampled_0_10.ini  area_1_downsampled_0_20.ini  area_1_downsampled_0_50.ini
modular_polygon_generation/libcore/data/configs/tests/area_1_parameters/height/: area_1_height_000_150.ini  area_1_height_025_100.ini  area_1_height_025_200.ini  area_1_height_050_100.ini  area_1_height_050_150.ini  area_1_height_075_0.ini  area_1_height_075_100.ini  area_1_height_075_200.ini  area_1_height_100_0.ini  area_1_height_100_200.ini
modular_polygon_generation/libcore/data/configs/tests/area_1_parameters/min_wall_dist/: area_1_min_wall_dist_0_00.ini  area_1_min_wall_dist_0_01.ini  area_1_min_wall_dist_0_05.ini  area_1_min_wall_dist_0_10.ini  area_1_min_wall_dist_0_25.ini  area_1_min_wall_dist_0_50.ini  area_1_min_wall_dist_1_00.ini
modular_polygon_generation/libcore/data/configs/tests/area_1_parameters/sampling_shape/: area_1_shape_cube_050.ini  area_1_shape_cube_100.ini  area_1_shape_cube_300.ini  area_1_shape_cuboid_100.ini  area_1_shape_cuboid_300.ini  area_1_shape_cylinder_025.ini  area_1_shape_cylinder_050.ini  area_1_shape_sphere_050.ini  area_1_shape_sphere_100.ini  area_1_shape_spheroid_025.ini  area_1_shape_spheroid_100.ini  area_1_shape_spheroid_200.ini  area_1_shape_spheroid_300.ini  copy.ini
modular_polygon_generation/libcore/data/configs/tests/areas/: area_1.ini  area_4.ini  area_6.ini
modular_polygon_generation/libcore/include/libcore/: logger.hpp  skeleton_finder.hpp  skeleton_parameters.hpp  visualizer.hpp
modular_polygon_generation/libcore/include/libcore/data_types/: contexts.hpp  facet.hpp  frontier.hpp  graph_types.hpp  node.hpp  vertex.hpp
modular_polygon_generation/libcore/include/libcore/ini/: SimpleIni.h
modular_polygon_generation/libcore/include/libcore/quickhull/Structs/: Mesh.hpp
modular_polygon_generation/libcore/include/libcore/skeleton_utils/: expansion.hpp  facet_utils.hpp  frontier_utils.hpp  geometry_utils.hpp  map_interface.hpp  raycasting.hpp  sampling.hpp
modular_polygon_generation/libcore/src/: main.cpp  skeleton_finder.cpp  visualizer.cpp
modular_polygon_generation/libcore/src/skeleton_utils/: expansion.cpp  facet_utils.cpp  frontier_utils.cpp  geometry_utils.cpp  map_interface.cpp  raycasting.cpp  sampling.cpp
output/run_1756995087/: area_1.ini
output/run_1756995367/: area_1.ini
output/run_1756996692/: area_1.ini  edge_list.txt  node_list.txt
output/run_1756998592/: map.ini
output/run_1756998634/: edge_list.txt  map.ini  node_list.txt
output/run_1756998665/: edge_list.txt  map.ini  node_list.txt
output/run_1756998764/: map.ini
output/run_1756998799/: edge_list.txt  map.ini  node_list.txt
output/run_1756998833/: edge_list.txt  map.ini  node_list.txt
output/run_1763312798/: area_1.ini
output/run_1763312830/: area_1.ini
output/tests/area_1_down_sampling/run_1762894363/shortest_path/: results.json
output/tests/area_1_down_sampling/run_1762894748/: area_1_downsampled_0_01.ini  edge_list.txt  graph.gt  graph_stats.json  node_id_remap.npy  node_list.txt
output/tests/area_1_down_sampling/run_1762894748/shortest_path/: results.json
output/tests/area_1_down_sampling/run_1762895116/: area_1_downsampled_0_05.ini  edge_list.txt  graph.gt  graph_stats.json  node_id_remap.npy  node_list.txt
output/tests/area_1_down_sampling/run_1762895116/shortest_path/: results.json
output/tests/area_1_down_sampling/run_1762895450/: area_1_downsampled_0_10.ini  edge_list.txt  graph.gt  graph_stats.json  node_id_remap.npy  node_list.txt
output/tests/area_1_down_sampling/run_1762895450/shortest_path/: results.json
output/tests/area_1_down_sampling/run_1762895679/: area_1_downsampled_0_50.ini  edge_list.txt  graph.gt  node_id_remap.npy  node_list.txt
output/tests/area_1_down_sampling/run_1762895761/: area_1_downsampled_0_20.ini  edge_list.txt  graph.gt  graph_stats.json  node_id_remap.npy  node_list.txt
output/tests/areas/run_1763043368/: node_list.txt
output/tests/areas/run_1763044999/: area_2.ini  edge_list.txt  graph.gt  graph_stats.json  node_id_remap.npy  node_list.txt
output/tests/areas/run_1763045393/: area_3.ini  chen_voxel.npy  edge_list.txt  graph.gt  graph_stats.json  node_id_remap.npy  node_list.txt
output/tests/areas/run_1763045560/: edge_list.txt  graph.gt  graph_stats.json  node_id_remap.npy  node_list.txt
output/tests/areas/run_1763045850/: area_5.ini  edge_list.txt  graph.gt  graph_stats.json  node_id_remap.npy  node_list.txt
output/tests/areas/run_1763047891/: edge_list.txt  graph.gt  graph_stats.json  node_id_remap.npy  node_list.txt
output/tests/chen_compare/run_1763074498/: edge_list.txt  node_list.txt  original.ini
output/tests/chen_compare/run_1763074682/: edge_list.txt  node_list.txt
output/tests/chen_compare/run_1763074943/: edge_list.txt  node_list.txt  parameter.ini
polygon_generation/include/polygon_generation/: skeleton_finder_3D.h
pythonScripts/: 2D_gvd.py  2D_projection.py  3D_Lee.py  chen_graph.py  chen_to_vox.py  computeViolations.py  convertToPcd.py  createVoxelMaps.py  downsample_map.py  evaluate.py  evaluate_voxel.py  functions.py  graphChen.py  graphSkel.py  graphVoxel.py  graph_tester.ipynb  graph_tester.py  plotHeightHistogram.py  tester.ipynb  vis.py  voxel_graph.py
(+369 files in other folders)
